# VideoReader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/video_reader/: __init__.py  buffer.py  video_reader.py
tests/: test.py
