[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_reader"
version = "0.0.1"
authors = [
  { name="Ryuto Yoshida"},
]
description = "Efficient video frame extraction and iteration with OpenCV."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-contrib-python",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/ry-yoshida/VideoReader"
"Bug Tracker" = "https://github.com/ry-yoshida/VideoReader/issues"

[tool.setuptools.packages.find]
where = ["src"]
